012-weather-app/src/App/Components/LocationSearch/LocationSearch.css
.search {
  flex: 1 1 100%;
  display: flex;
  flex-direction: column;
}

.search input {
  font: inherit;
  padding: 8px;
  background-color: var(--light-background-color);
  border: 1px solid var(--input-border-color);
}

.search .results {
  position: relative;
}

.search ul {
  list-style: none;
  border: 1px solid rgba(255, 255, 255, 0.3);
  border-radius: 5px;
  box-shadow: 0 0.2rem 0.6rem rgba(0, 0, 0, 0.5);
  position: absolute;
  width: 100%;
  background-color: #2a2a2a;
  z-index: 1;
}

.search ul li {
  padding: 0.5rem;
  cursor: pointer;
}

.search ul li:focus,
.search ul li:hover {
  background-color: rgba(255, 255, 255, 0.05);
}

